--- a/Housemates/Housemates/Base.lproj/Main.storyboard
+++ b/Housemates/Housemates/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -205,7 +205,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You'll use this number or email when you log in" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MdY-WF-88b">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="You'll use this number or email when you log in" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MdY-WF-88b">
                                 <rect key="frame" x="20" y="143" width="374" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="fQR-2J-Dtc"/>
@@ -214,15 +214,7 @@
                                 <color key="textColor" systemColor="systemGray2Color"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" allowsEditingTextAttributes="YES" borderStyle="bezel" placeholder="Enter your email address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BJQ-G9-5hF">
-                                <rect key="frame" x="20" y="257" width="374" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="kkt-rP-opW"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" allowsEditingTextAttributes="YES" borderStyle="bezel" placeholder="Enter your mobile number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V9E-hI-chU">
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" allowsEditingTextAttributes="YES" borderStyle="bezel" placeholder="Enter your mobile number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V9E-hI-chU">
                                 <rect key="frame" x="20" y="327" width="374" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="MND-lo-xeV"/>
@@ -230,7 +222,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textField>
-                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JUO-0c-ntX">
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JUO-0c-ntX">
                                 <rect key="frame" x="20" y="413" width="374" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="9cl-AR-cWS"/>
@@ -248,32 +240,26 @@
                         <viewLayoutGuide key="safeArea" id="3fC-nK-6Ee"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="BJQ-G9-5hF" firstAttribute="leading" secondItem="MdY-WF-88b" secondAttribute="leading" id="DcT-6I-gl6"/>
-                            <constraint firstItem="3fC-nK-6Ee" firstAttribute="trailing" secondItem="BJQ-G9-5hF" secondAttribute="trailing" constant="20" id="EGE-q1-0b8"/>
                             <constraint firstItem="3fC-nK-6Ee" firstAttribute="trailing" secondItem="V9E-hI-chU" secondAttribute="trailing" constant="20" id="HBp-fn-fEo"/>
-                            <constraint firstItem="BJQ-G9-5hF" firstAttribute="centerX" secondItem="GKT-ep-RAX" secondAttribute="centerX" id="HOy-Cz-r2h"/>
                             <constraint firstItem="JUO-0c-ntX" firstAttribute="centerX" secondItem="GKT-ep-RAX" secondAttribute="centerX" id="Kfa-a6-Jif"/>
-                            <constraint firstItem="BJQ-G9-5hF" firstAttribute="top" secondItem="MdY-WF-88b" secondAttribute="bottom" constant="64" id="bpE-uT-n0b"/>
                             <constraint firstItem="9ad-q2-LFJ" firstAttribute="centerX" secondItem="GKT-ep-RAX" secondAttribute="centerX" id="brr-Ls-s0p"/>
                             <constraint firstItem="V9E-hI-chU" firstAttribute="centerX" secondItem="GKT-ep-RAX" secondAttribute="centerX" id="btK-Bq-oV8"/>
                             <constraint firstItem="MdY-WF-88b" firstAttribute="top" secondItem="9ad-q2-LFJ" secondAttribute="bottom" constant="12" id="c0l-FP-xYP"/>
                             <constraint firstItem="JUO-0c-ntX" firstAttribute="top" secondItem="V9E-hI-chU" secondAttribute="bottom" constant="36" id="fyU-Np-I75"/>
-                            <constraint firstItem="V9E-hI-chU" firstAttribute="top" secondItem="BJQ-G9-5hF" secondAttribute="bottom" constant="20" id="jyH-0P-VNj"/>
                             <constraint firstItem="3fC-nK-6Ee" firstAttribute="trailing" secondItem="JUO-0c-ntX" secondAttribute="trailing" constant="20" id="lXJ-Am-990"/>
                             <constraint firstItem="9ad-q2-LFJ" firstAttribute="top" secondItem="3fC-nK-6Ee" secondAttribute="top" constant="36" id="qvC-aW-AWv"/>
-                            <constraint firstItem="BJQ-G9-5hF" firstAttribute="trailing" secondItem="MdY-WF-88b" secondAttribute="trailing" id="zcu-Eb-AmM"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="t67-6q-g7o"/>
                     <connections>
-                        <outlet property="emailTextField" destination="BJQ-G9-5hF" id="mQu-VB-V3X"/>
                         <outlet property="nextButton" destination="JUO-0c-ntX" id="iaM-rh-lio"/>
                         <outlet property="phoneTextField" destination="V9E-hI-chU" id="P70-WW-Se6"/>
+                        <segue destination="UpT-k1-fTT" kind="show" identifier="segueToPassword" id="B2T-vu-dff"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Noc-3Z-aW9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2764" y="82"/>
+            <point key="canvasLocation" x="2791" y="82"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ekO-H0-mAL">
@@ -293,6 +279,79 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TKr-vp-aTk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="953.62318840579712" y="81.696428571428569"/>
+        </scene>
+        <!--PasswordVC-->
+        <scene sceneID="Nte-A1-NxA">
+            <objects>
+                <viewController id="UpT-k1-fTT" customClass="PasswordVC" customModule="Housemates" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5EN-3i-RvM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create a Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ss-9F-3OA">
+                                <rect key="frame" x="79.5" y="92" width="255" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create a new password for your account" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3EB-AQ-xSU">
+                                <rect key="frame" x="20" y="142.5" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="HGp-sf-FWD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mzo-sd-Wbk">
+                                <rect key="frame" x="20" y="242.5" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="B6k-B6-kd0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RBm-pY-wIx">
+                                <rect key="frame" x="20" y="328.5" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="D9u-fC-i3r"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="uFC-7D-zeK"/>
+                                </constraints>
+                                <color key="tintColor" red="0.14151540400000001" green="0.47687172890000001" blue="0.99932914969999997" alpha="0.49843127520000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Done"/>
+                                <connections>
+                                    <action selector="onDone:" destination="UpT-k1-fTT" eventType="touchUpInside" id="X4J-wv-Un6"/>
+                                    <action selector="onNext:" destination="12b-Rp-vyd" eventType="touchUpInside" id="HqS-Ml-6eq"/>
+                                    <action selector="onNext:" destination="dFa-9s-lke" eventType="touchUpInside" id="ueg-P7-1RE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="epe-1S-uME"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0ss-9F-3OA" firstAttribute="top" secondItem="epe-1S-uME" secondAttribute="top" constant="36" id="5Uh-tm-aWP"/>
+                            <constraint firstItem="Mzo-sd-Wbk" firstAttribute="top" secondItem="3EB-AQ-xSU" secondAttribute="bottom" constant="64" id="67j-GA-uRI"/>
+                            <constraint firstItem="Mzo-sd-Wbk" firstAttribute="top" secondItem="3EB-AQ-xSU" secondAttribute="bottom" constant="50" id="8EE-Mb-Wa8"/>
+                            <constraint firstItem="RBm-pY-wIx" firstAttribute="top" secondItem="Mzo-sd-Wbk" secondAttribute="bottom" constant="36" id="AKX-Gw-yz9"/>
+                            <constraint firstItem="Mzo-sd-Wbk" firstAttribute="centerX" secondItem="5EN-3i-RvM" secondAttribute="centerX" id="AtR-mH-7eO"/>
+                            <constraint firstItem="0ss-9F-3OA" firstAttribute="centerX" secondItem="5EN-3i-RvM" secondAttribute="centerX" id="DwH-GH-GM9"/>
+                            <constraint firstItem="Mzo-sd-Wbk" firstAttribute="centerX" secondItem="5EN-3i-RvM" secondAttribute="centerX" id="RgJ-6V-qta"/>
+                            <constraint firstItem="3EB-AQ-xSU" firstAttribute="centerX" secondItem="5EN-3i-RvM" secondAttribute="centerX" id="Rx7-UU-iih"/>
+                            <constraint firstItem="Mzo-sd-Wbk" firstAttribute="leading" secondItem="epe-1S-uME" secondAttribute="leading" constant="20" id="VOT-Is-Qpo"/>
+                            <constraint firstItem="RBm-pY-wIx" firstAttribute="centerX" secondItem="5EN-3i-RvM" secondAttribute="centerX" id="e4F-5Z-W5A"/>
+                            <constraint firstItem="epe-1S-uME" firstAttribute="trailing" secondItem="Mzo-sd-Wbk" secondAttribute="trailing" constant="20" id="fB9-H2-Nk9"/>
+                            <constraint firstItem="3EB-AQ-xSU" firstAttribute="top" secondItem="0ss-9F-3OA" secondAttribute="bottom" constant="12" id="gKi-MJ-NdJ"/>
+                            <constraint firstItem="epe-1S-uME" firstAttribute="trailing" secondItem="RBm-pY-wIx" secondAttribute="trailing" constant="20" id="oQR-qT-XmE"/>
+                            <constraint firstItem="Mzo-sd-Wbk" firstAttribute="trailing" secondItem="3EB-AQ-xSU" secondAttribute="trailing" id="t88-pC-6vq"/>
+                            <constraint firstItem="Mzo-sd-Wbk" firstAttribute="leading" secondItem="3EB-AQ-xSU" secondAttribute="leading" id="ucX-Zc-ZMc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="DPm-Rk-d3n"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wBr-8S-jJN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3692.753623188406" y="75"/>
         </scene>
     </scenes>
     <resources>
